widget placeholder spacing fix

--- a/widgy/static/widgy/css/widgy.scss
+++ b/widgy/static/widgy/css/widgy.scss
@@ -933,7 +933,7 @@ div.widgy {
             li.drag_placeholder {
               background: transparent;
               display: inline-block;
-              height: 42px;
+              height: 32px;
               margin: 0 4px 4px 0;
               padding: 5px 11px 5px 6px; // account for the border
               width: 185px;
